# actix-web-newsletter-project

./: Cargo.toml  README.MD  docker-compose.yml  requests.HTTP
configuration/local/: .env  Dockerfile
migrations/: 20240325090326_create_subscribe_table.sql
src/: configuration.rs  lib.rs  main.rs  runner.rs
src/extractors/: mod.rs  subscribe_extractor.rs
src/handlers/: health_check_handler.rs  mod.rs  subscribe_handler.rs
tests/: health_check_test.rs  integration_tests.rs
