[package]
name = "actix-web-newsletter-project"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.5.1"
clippy = "0.0.302"
env_logger = "0.11.3"
tokio = { version = "1.36.0", features = ["full"] }
log = "0.4.21"
serde_json = "1.0.114"
serde = "1.0.197"

[dev-dependencies]
reqwest = "0.12.1"
